--- a/packages/abi-to-sol/package.json
+++ b/packages/abi-to-sol/package.json
@@ -22,6 +22,11 @@
     "test:dist": "yarn prepare && jest dist/lib",
     "test:dist:test": "yarn prepare && jest dist/test"
   },
+  "homepage": "https://github.com/gnidan/abi-to-sol#readme",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/gnidan/abi-to-sol.git"
+  },
   "devDependencies": {
     "@types/faker": "^5.1.2",
     "@types/jest": "^26.0.14",
