--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "dist/lib/index.js",
   "types": "dist/lib/index.d.ts",
   "bin": {
-    "abi-to-sol": "dist/bin/abi-to-sol.js",
-    "generate-random-abi": "dist/bin/generate-random-abi.js"
+    "abi-to-sol": "dist/bin/abi-to-sol.js"
   },
   "files": [
     "dist"
@@ -16,7 +15,6 @@
   "scripts": {
     "abi-to-sol": "ts-node ./bin/abi-to-sol.ts",
     "prepare": "tsc",
-    "generate-random-abi": "ts-node ./bin/generate-random-abi.ts",
     "test": "jest lib/**",
     "test:test": "jest test/**",
     "test:dist": "yarn prepare && jest dist/lib",
@@ -46,8 +44,10 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "@truffle/codec": "^0.6.4",
-    "@truffle/contract-schema": "^3.3.0",
+    "@drizzle/store": "^1.5.3",
+    "@truffle/abi-utils": "^0.1.0",
+    "@truffle/codec": "^0.7.1",
+    "@truffle/contract-schema": "^3.3.1",
     "ajv": "^6.12.5",
     "better-ajv-errors": "^0.6.7",
     "neodoc": "^2.0.2",
