--- a/packages/abi-to-sol/package.json
+++ b/packages/abi-to-sol/package.json
@@ -51,7 +51,7 @@
     "better-ajv-errors": "^0.6.7",
     "neodoc": "^2.0.2",
     "prettier": "^2.1.2",
-    "prettier-plugin-solidity": "^1.0.0-alpha.59",
+    "prettier-plugin-solidity": "1.0.0-alpha.59",
     "source-map-support": "^0.5.19"
   },
   "husky": {
