--- a/packages/abi-to-sol/package.json
+++ b/packages/abi-to-sol/package.json
@@ -31,6 +31,7 @@
     "@types/jest": "^26.0.14",
     "@types/jest-json-schema": "^2.1.2",
     "@types/prettier": "^2.1.1",
+    "@types/semver": "^7.3.7",
     "change-case": "^4.1.1",
     "faker": "^5.1.0",
     "fast-check": "^2.4.0",
@@ -51,6 +52,7 @@
     "ajv": "^6.12.5",
     "better-ajv-errors": "^0.6.7",
     "neodoc": "^2.0.2",
+    "semver": "^7.3.5",
     "source-map-support": "^0.5.19"
   },
   "optionalDependencies": {
