--- a/packages/abi-to-sol/package.json
+++ b/packages/abi-to-sol/package.json
@@ -1,6 +1,6 @@
 {
   "name": "abi-to-sol",
-  "version": "0.7.1",
+  "version": "0.8.0-0",
   "description": "Compile ABI JSON to Solidity interface",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
@@ -15,6 +15,7 @@
   "scripts": {
     "abi-to-sol": "ts-node ./bin/abi-to-sol.ts",
     "prepare": "tsc",
+    "madge": "madge ./src --image deps.pdf",
     "test": "jest src/**",
     "test:test": "jest test/**",
     "test:dist": "yarn prepare && jest dist/src",
@@ -34,16 +35,17 @@
     "@types/semver": "^7.3.7",
     "change-case": "^4.1.1",
     "faker": "^5.1.0",
-    "fast-check": "^3.1.1",
+    "fast-check": "3.1.1",
     "husky": ">=4",
     "jest": "^26.4.2",
     "jest-fast-check": "^0.0.1",
     "jest-json-schema": "^2.1.0",
     "lint-staged": ">=10",
-    "solc": "^0.8.6",
+    "madge": "^5.0.2",
+    "solc": "^0.8.20",
     "ts-jest": "^26.4.0",
     "ts-node": "^9.0.0",
-    "typescript": "4.5.2"
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "@truffle/abi-utils": "^1.0.0",
