--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -34,7 +34,7 @@
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
-    "abi-to-sol": "^0.7.1",
+    "abi-to-sol": "^0.8.0-0",
     "add": "^2.0.6",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
@@ -94,7 +94,7 @@
     "style-loader": "1.3.0",
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
-    "typescript": "4.5.2",
+    "typescript": "^4.9.5",
     "unstated-next": "^1.1.0",
     "url-loader": "4.1.1",
     "web-vitals": "^1.0.1",
