--- a/packages/abi-to-sol/package.json
+++ b/packages/abi-to-sol/package.json
@@ -43,7 +43,7 @@
     "solc": "^0.8.6",
     "ts-jest": "^26.4.0",
     "ts-node": "^9.0.0",
-    "typescript": "^4.4.4"
+    "typescript": "4.5.2"
   },
   "dependencies": {
     "@truffle/abi-utils": "^0.2.2",
