--- a/packages/abi-to-sol/package.json
+++ b/packages/abi-to-sol/package.json
@@ -57,7 +57,7 @@
   },
   "optionalDependencies": {
     "prettier": "^2.1.2",
-    "prettier-plugin-solidity": "1.0.0-alpha.59"
+    "prettier-plugin-solidity": "^1.0.0-dev.23"
   },
   "husky": {
     "hooks": {
