--- a/packages/abi-to-sol/package.json
+++ b/packages/abi-to-sol/package.json
@@ -1,6 +1,6 @@
 {
   "name": "abi-to-sol",
-  "version": "0.8.0-0",
+  "version": "0.8.0",
   "description": "Compile ABI JSON to Solidity interface",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
